--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "jspdd-kind",
   "version": "1.0.1",
   "description": "",
-  "main": "kind.js",
+  "main": "dist/kind.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint src test --fix",
+    "dev": "webpack --config webpack/webpack.config.development.js --watch",
+    "build": "webpack --config webpack/webpack.config.production.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,27 @@
   "bugs": {
     "url": "https://github.com/openjavascript/jspdd-kind/issues"
   },
-  "homepage": "https://github.com/openjavascript/jspdd-kind#readme"
+  "homepage": "https://github.com/openjavascript/jspdd-kind#readme",
+  "devEngines": {
+    "node": "4.x || 5.x",
+    "npm": "2.x || 3.x"
+  },
+  "dependencies": {
+    "babel-cli": "^6.4.0",
+    "babel-core": "^6.4.0",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015-loose": "^7.0.0",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "es5-shim": "^4.3.1",
+    "eslint": "^1.7.1",
+    "eslint-config-rackt": "^1.1.1",
+    "eslint-plugin-react": "^3.16.1",
+    "rimraf": "^2.3.4",
+    "webpack": "<=1.12.12"
+  }
+
 }
